# GNNv3_RC_1

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  CITATION_BENCHMARK_2026-06-23.md  GNNv3_RC1_HANDOFF.md  GNNv3_RC1_REPORT.md  GNNv3_RC1_VALIDATION_2026-07-01.md  GRAPH_WAVE_FOUNDATION_CHECKPOINT_2026-06-16.md  GRAPH_WAVE_GRAMMAR_ACCEPTED_2026-06-20.md  GRAPH_WAVE_LEGACY_CONTACT_AUDIT_2026-06-17.md  GRAPH_WAVE_SCOPE_NOTE_2026-06-20.md  HDC_STREAM.md  PHYSICS_ONLY_DISCIPLINE.md  RESULTS.md  SEMANTIC_WORD_SUBSTRATE.md  WAVE_FIDELITY.md
research/: CORA_DATA.md  README.md  probe_a1_levelspacing.cpp  probe_a2_phasedepth.cpp  probe_a3_diffusion.cpp  probe_a3b_robust.cpp  probe_a4_abcage.cpp  probe_a5_compose.cpp  probe_blackhole_compress.cpp  probe_cora.cpp  probe_crosscheck.cpp  probe_depth_close.cpp  probe_diffract.cpp  probe_gnn1.cpp  probe_gnn_prod.cpp  probe_hdc_stream.cpp  probe_holoclf.cpp  probe_lateral.cpp  probe_nonlinear_engine.cpp  probe_physics.cpp  probe_pipeline.cpp  probe_pipeline2.cpp  probe_polar_binding.cpp  probe_prism_physical.cpp  probe_settle_route.cpp  probe_sparse_scale.cpp  probe_steer.cpp  probe_streaming_compression.cpp  probe_substrate_value.cpp  probe_wave_complete.cpp  probe_wave_fidelity.cpp  probe_whiten.cpp
scripts/: run_nonlinear.ps1  run_tests.ps1  run_tests_fast.ps1
tools/: README.md  absorbing_screen.cpp  complex_graph_wave_minimal_test.cpp  gauge_wilson_invariance_test.cpp  graph_wave_amplitude_amplification_contract_test.cpp  graph_wave_attention_contract_test.cpp  graph_wave_autopoiesis_contract_test.cpp  graph_wave_autopoiesis_noise_diagnostic_test.cpp  graph_wave_bistable_drive_diagnostic_test.cpp  graph_wave_closure_contract_test.cpp  graph_wave_closure_noise_diagnostic_test.cpp  graph_wave_deep_round_contract_test.cpp  (+65 more)
